--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                                 <div class="form-group row">
                                     <label for="inputAppName" class="col-sm-5 col-form-label">App name</label>
                                     <div class="col-sm-7">
-                                        <input v-model="newApp.name" type="text" class="form-control" id="inputAppName" placeholder="name">
+                                        <input v-bind:disabled="newApp.isUpdate" v-model="newApp.name" type="text" class="form-control" id="inputAppName" placeholder="name">
                                     </div>
                                 </div>
                                 <div class="form-group row">
