--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,17 @@
         </nav>
         <div class="container">
             <div id="app-content">
+                <div id="no-app" v-if="!apps.length" class="justify-content-center">
+                    <div>Looks like you haven't defined any app yet !</div>
+                    <button class="btn btn-success" type="button" v-on:click="resetForm()">Add app</button>
+                </div>
+                <div id="app-filter" v-if="apps.length" class="row justify-content-center">
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" v-model="search" placeholder="Search app" />
+                    </div>
+                </div>
                 <div class="row justify-content-center" id="app-list">
-                    <div v-for="app in apps" class="col-sm-3">
+                    <div v-for="app in filteredApps" class="col-sm-3">
                         <div class="app">
                             <div class="app-header">
                                 <div class="app-name">{{app.name}}</div>
