--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,14 @@
                                         <input v-model="newApp.pollTime" type="number" class="form-control" id="inputAppPoll" placeholder="5">
                                     </div>
                                 </div>
+                                <div class="form-group row">
+                                    <label for="inputAppNotify" class="col-sm-5 col-form-label">Notify by email</label>
+                                    <div class="col-sm-7">
+                                        <label class="form-check-label">
+                                            <input v-model="newApp.notify" type="checkbox" class="form-check-input" id="inputAppNotify"> Enable
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
