--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
                             </div>
                             <div class="app-lastup">Last up : {{formatUpdate(app.lastUpDate)}}</div>
                             <div class="app-buttons btn-group btn-group-sm">
+                                <button v-if="app.checkStatus === 'start'" type="button" class="btn btn-danger" v-on:click="changeStatus('stop', app)">Stop</button>
+                                <button v-else type="button" class="btn btn-success" v-on:click="changeStatus('start', app)">Start</button>
                                 <button type="button" class="btn btn-primary" v-on:click="updateForm(app)">Update</button>
                                 <button type="button" class="btn btn-danger" v-on:click="deleteApp(app)">Delete</button>
                             </div>
